--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,7 +45,8 @@
         "typeinfo": "c",
         "stdbool.h": "c",
         "mmu.h": "c",
-        "hash.h": "c"
+        "hash.h": "c",
+        "vm.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
