lazy_load, load, vm 프레임 관리 추가

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,7 +46,8 @@
         "stdbool.h": "c",
         "mmu.h": "c",
         "hash.h": "c",
-        "vm.h": "c"
+        "vm.h": "c",
+        "atomic": "c"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
