--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,7 +47,8 @@
         "mmu.h": "c",
         "hash.h": "c",
         "vm.h": "c",
-        "atomic": "c"
+        "atomic": "c",
+        "uninit.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
