--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,7 +52,16 @@
         "anon.h": "c",
         "inspect.h": "c",
         "disk.h": "c",
-        "stddef.h": "c"
+        "stddef.h": "c",
+        "array": "c",
+        "chrono": "c",
+        "deque": "c",
+        "string": "c",
+        "vector": "c",
+        "memory_resource": "c",
+        "stop_token": "c",
+        "functional": "c",
+        "off_t.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
