--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,7 +52,28 @@
         "anon.h": "c",
         "inspect.h": "c",
         "disk.h": "c",
-        "stddef.h": "c"
+        "stddef.h": "c",
+        "array": "c",
+        "chrono": "c",
+        "deque": "c",
+        "string": "c",
+        "vector": "c",
+        "memory_resource": "c",
+        "stop_token": "c",
+        "functional": "c",
+        "off_t.h": "c",
+        "cmath": "c",
+        "compare": "c",
+        "unordered_map": "c",
+        "string_view": "c",
+        "algorithm": "c",
+        "limits": "c",
+        "numeric": "c",
+        "ostream": "c",
+        "ratio": "c",
+        "streambuf": "c",
+        "type_traits": "c",
+        "tuple": "c"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
